[gd_scene load_steps=25 format=3 uid="uid://b1ah0koh186x3"]

[ext_resource type="Script" path="res://menus/credits.gd" id="1_3q2ey"]
[ext_resource type="FontFile" uid="uid://dvvkhv255pbtb" path="res://assets/fonts/Gputeks-Bold.ttf" id="2_3elru"]
[ext_resource type="FontFile" uid="uid://dprn02hhks7n1" path="res://assets/fonts/Gputeks-Regular.ttf" id="3_ygyjd"]
[ext_resource type="Texture2D" uid="uid://bcnesji8o5vvj" path="res://assets/spot_light_gradient_90d.png" id="4_ya0b5"]
[ext_resource type="FontFile" uid="uid://bf3lgo13uua43" path="res://assets/fonts/Righteous-Regular.ttf" id="5_wtrg7"]
[ext_resource type="Script" path="res://menus/back_button.gd" id="6_3dj0m"]
[ext_resource type="Texture2D" uid="uid://css0hsjh80ps0" path="res://assets/point_light_gradient.png" id="7_od76o"]
[ext_resource type="AudioStream" uid="uid://de4uyk68ll3ry" path="res://assets/audio/switch-8.mp3" id="8_upnqp"]
[ext_resource type="Texture2D" uid="uid://cuunrrc7knacj" path="res://assets/jam_cards/GWJ-Full-Logo-noBG-4k.png" id="9_r7hrb"]
[ext_resource type="Texture2D" uid="uid://t1entgd52q27" path="res://assets/jam_cards/64-All-Cards.png" id="10_nklfa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_34byh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u51pt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3kxfo"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_52n5f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_a4273"]

[sub_resource type="Animation" id="Animation_d5kru"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/BackButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/Title:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("JamInfoButton:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_crskb"]
resource_name = "go_back"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PointLight2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Control/BackButton:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBoxContainer:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"return_to_main_screen"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("JamInfoButton:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_rpx2d"]
resource_name = "start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PointLight2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Control/BackButton:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Control/Title:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("JamInfoButton:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rmynx"]
_data = {
"RESET": SubResource("Animation_d5kru"),
"go_back": SubResource("Animation_crskb"),
"start": SubResource("Animation_rpx2d")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_v8o7r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hqiw4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q0d54"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fm0gq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yu0p0"]

[node name="Credits" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
focus_neighbor_left = NodePath("JamInfoButton")
focus_neighbor_top = NodePath("Control/BackButton")
focus_neighbor_right = NodePath("Control/BackButton")
focus_neighbor_bottom = NodePath("JamInfoButton")
focus_next = NodePath("Control/BackButton")
focus_previous = NodePath("JamInfoButton")
focus_mode = 2
script = ExtResource("1_3q2ey")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
mouse_filter = 2
color = Color(0.270588, 0.270588, 0.305882, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 13

[node name="Title" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_3elru")
theme_override_font_sizes/font_size = 66
text = "Credits"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ygyjd")
theme_override_font_sizes/font_size = 20
text = "GPUTeks Fonts by gluk:  
1001fonts.com/gputeks-font.html"
horizontal_alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ygyjd")
theme_override_font_sizes/font_size = 20
text = "Righteous Regular Font by Astigmatic One Eye Typographic Institute: 
1001fonts.com/righteous-font.html"
horizontal_alignment = 1

[node name="Label4" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ygyjd")
theme_override_font_sizes/font_size = 20
text = "Clock Ticking Sound Effect by Pixabay: 
pixabay.com/sound-effects/clock-ticking-83775/"
horizontal_alignment = 1

[node name="Label5" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ygyjd")
theme_override_font_sizes/font_size = 20
text = "Interface Button Sound Effect by SoundReality:
pixabay.com/sound-effects/interface-button-154180/"
horizontal_alignment = 1

[node name="Label6" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ygyjd")
theme_override_font_sizes/font_size = 20
text = "Switch 8 Sound Effect by soundjay:
soundjay.com/switch/switch-8.mp3"
horizontal_alignment = 1

[node name="Label7" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_ygyjd")
theme_override_font_sizes/font_size = 20
text = "Background Music by ZapSplat:
zapsplat.com/music/tranquil-calm-and-dreamy-soundscape-very-slight-edge-of-suspense/"
horizontal_alignment = 1

[node name="PointLight2D" type="PointLight2D" parent="."]
visible = false
position = Vector2(569, -107)
rotation = -0.785398
texture = ExtResource("4_ya0b5")
texture_scale = 3.05

[node name="Control" type="Control" parent="."]
layout_mode = 2
mouse_filter = 1

[node name="BackButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 13.0
offset_top = 250.0
offset_right = 107.0
offset_bottom = 427.0
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../../JamInfoButton")
focus_neighbor_top = NodePath("../../JamInfoButton")
focus_neighbor_right = NodePath("../../JamInfoButton")
focus_neighbor_bottom = NodePath("../../JamInfoButton")
focus_next = NodePath("../../JamInfoButton")
focus_previous = NodePath("../../JamInfoButton")
theme_override_colors/font_color = Color(0.12549, 0.12549, 0.12549, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0.509804, 0.509804, 0.509804, 1)
theme_override_colors/font_focus_color = Color(0.12549, 0.12549, 0.12549, 1)
theme_override_fonts/font = ExtResource("5_wtrg7")
theme_override_font_sizes/font_size = 136
theme_override_styles/normal = SubResource("StyleBoxEmpty_34byh")
theme_override_styles/hover = SubResource("StyleBoxEmpty_u51pt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3kxfo")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_52n5f")
theme_override_styles/focus = SubResource("StyleBoxEmpty_a4273")
action_mode = 0
text = "<"
script = ExtResource("6_3dj0m")

[node name="PointLight2D" type="PointLight2D" parent="Control/BackButton"]
visible = false
position = Vector2(60, 86)
texture = ExtResource("7_od76o")

[node name="Title" type="Label" parent="Control"]
layout_mode = 0
offset_top = 212.0
offset_right = 1152.0
offset_bottom = 399.0
theme_override_colors/font_color = Color(0.235294, 0.235294, 0.266667, 1)
theme_override_fonts/font = ExtResource("2_3elru")
theme_override_font_sizes/font_size = 116
text = "Luminal"
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "start"
libraries = {
"": SubResource("AnimationLibrary_rmynx")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_upnqp")
bus = &"Effects"

[node name="JamInfo" type="Control" parent="."]
visible = false
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2

[node name="TextureRect" type="TextureRect" parent="JamInfo"]
layout_mode = 2
offset_left = -891.0
offset_top = -9.0
offset_right = 261.0
offset_bottom = 1143.0
scale = Vector2(0.505, 0.505)
size_flags_vertical = 0
texture = ExtResource("9_r7hrb")
expand_mode = 4
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="JamInfo"]
layout_mode = 2
offset_left = -816.0
offset_top = 279.0
offset_right = 336.0
offset_bottom = 1431.0
scale = Vector2(0.39, 0.39)
size_flags_vertical = 0
texture = ExtResource("10_nklfa")
expand_mode = 4
stretch_mode = 4

[node name="JamInfoButton" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(250, 100)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_neighbor_left = NodePath("../Control/BackButton")
focus_neighbor_top = NodePath("../Control/BackButton")
focus_neighbor_right = NodePath("../Control/BackButton")
focus_neighbor_bottom = NodePath("../Control/BackButton")
focus_next = NodePath("../Control/BackButton")
focus_previous = NodePath("../Control/BackButton")
theme_override_colors/font_color = Color(0.670588, 0.670588, 0.670588, 1)
theme_override_colors/font_pressed_color = Color(0.262745, 0.262745, 0.262745, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_3elru")
theme_override_styles/normal = SubResource("StyleBoxEmpty_v8o7r")
theme_override_styles/hover = SubResource("StyleBoxEmpty_hqiw4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_q0d54")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_fm0gq")
theme_override_styles/focus = SubResource("StyleBoxEmpty_yu0p0")
text = "Jam Information"

[connection signal="button_down" from="Control/BackButton" to="Control/BackButton" method="_on_button_down"]
[connection signal="focus_entered" from="Control/BackButton" to="Control/BackButton" method="_on_focus_entered"]
[connection signal="focus_exited" from="Control/BackButton" to="Control/BackButton" method="_on_focus_exited"]
[connection signal="mouse_entered" from="Control/BackButton" to="Control/BackButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Control/BackButton" to="Control/BackButton" method="_on_mouse_exited"]
[connection signal="pressed" from="Control/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="JamInfoButton" to="." method="_on_jam_info_button_pressed"]
